# api

./: .gitignore  Cargo.toml  LICENSE  LICENSE_TEMPLATE  Makefile  README.md  build.rs  rust-toolchain  rustfmt.toml
.circleci/: config.yml
debian/: .gitignore  changelog  control  pihole-API.service  pihole-api.postinst  rules
docker/aarch64/: Dockerfile
docker/arm/: Dockerfile
docker/armhf/: Dockerfile
docker/ppc64le/: Dockerfile
docker/rpm-builder/: Dockerfile
docker/x86_32/: Dockerfile
docker/x86_64/: Dockerfile
docker/x86_64-musl/: Dockerfile
rpm/: pihole-api.spec
src/: auth.rs  config.rs  config_files.rs  convert.rs  dns.rs  ftl.rs  hostname.rs  lib.rs  main.rs  network.rs  networkinfo.rs  service.rs  setup.rs  setup_validate.rs  setup_vars.rs  stats.rs  testing.rs  util.rs  version.rs  web.rs
src/cli/: args.rs  dnsmasq.rs  handler.rs  mod.rs
src/config/: config.rs  env.rs  file.rs  mod.rs
src/databases/: common.rs  custom_connection.rs  foreign_key_connection.rs  mod.rs
src/databases/ftl/: mod.rs  model.rs  schema.rs  testing.rs
src/databases/gravity/: mod.rs  model.rs  schema.rs  testing.rs
src/dns/: add_list.rs  common.rs  delete_list.rs  get_list.rs  list.rs  mod.rs  status.rs
src/env/: config.rs  env.rs  env_impl.rs  file.rs  mod.rs
src/env/config/: file_locations.rs  general.rs  ldap.rs  mod.rs  root_config.rs  web.rs
src/ftl/: lock_thread.rs  memory_model.rs  mod.rs  shared_lock.rs  shared_memory.rs  socket.rs
src/ftl/memory_model/: client.rs  counters.rs  domain.rs  lock.rs  mod.rs  over_time.rs  query.rs  settings.rs  strings.rs  upstream.rs
src/lists/: list.rs  mod.rs  repository.rs  service.rs
src/routes/: auth.rs  mod.rs  version.rs  web.rs
src/routes/dns/: add_list.rs  common.rs  delete_list.rs  get_list.rs  list.rs  mod.rs  status.rs
src/routes/settings/: common.rs  convert.rs  dhcp.rs  dns.rs  ftldb.rs  get_dhcp.rs  get_dns.rs  get_ftl.rs  get_ftldb.rs  get_network.rs  mod.rs  web.rs
src/routes/settings/test/: ftldb.rs  get_dns.rs
src/routes/settings/working.thur.am/: dns.rs
src/routes/stats/: clients.rs  common.rs  forward_destinations.rs  history.rs  mod.rs  over_time_clients.rs  over_time_history.rs  query_types.rs  recent_blocked.rs  summary.rs  summary_db.rs  top_clients.rs  top_domains.rs  unknown_queries.rs  upstreams.rs
src/routes/stats/database/: mod.rs  over_time_clients_db.rs  over_time_history_db.rs  query_types_db.rs  summary_db.rs  top_clients_db.rs  top_domains_db.rs  (+1 more)
src/services/: mod.rs  service.rs
src/services/domain_audit/: mod.rs  repository.rs
src/services/lists/: list.rs  mod.rs  repository.rs  service.rs
src/settings/: dnsmasq.rs  entries.rs  io.rs  mod.rs  privacy_level.rs  value_type.rs
src/stats/: clients.rs  forward_destinations.rs  history.rs  mod.rs  over_time_clients.rs  over_time_forward_destinations.rs  over_time_history.rs  over_time_query_types.rs  query_types.rs  recent_blocked.rs  summary.rs  top_clients.rs  top_domains.rs  unknown_queries.rs
static/: index.html
test/: .gitignore  FTL.db  FTL.sql  gravity.db  gravity.sql
tests/: common.rs  stats_test.rs
(+22 files in other folders)
