[package]
name = "pihole_api"
version = "0.1.0"
authors = ["Mcat12 <mark@pi-hole.net>"]
description = "Work in progress HTTP API for Pi-hole."
homepage = "https://pi-hole.net"
repository = "https://github.com/pi-hole/api"
readme = "README.md"
license = "EUPL-1.2"
publish = false

[profile.release]
lto = true

[dependencies]
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
rocket_cors = { version = "0.2.3", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rmp = "0.8"
regex = "1.0.0"
rust-embed = "3.0.0"
toml = "0.4"
failure = "0.1.1"
failure_derive = "0.1.1"
hostname = "0.1.5"
tempfile = "3.0.2"
get_if_addrs = "0.5.3"
shmem = "0.2.0"
libc = "0.2.42"
nix = "0.11.0"
base64 = "0.9"

[dev-dependencies]
serde_json = "1.0"
