[package]
name = "pihole_api"
version = "0.1.0"
authors = ["Mcat12 <mark@pi-hole.net>"]
description = "Work in progress HTTP API for Pi-hole."
homepage = "https://pi-hole.net"
repository = "https://github.com/pi-hole/api"
readme = "README.md"
license = "EUPL-1.2"
publish = false
edition = "2018"

[profile.release]
lto = true

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["diesel_sqlite_pool"] }
rocket_cors = { version = "0.4", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rmp = "0.8"
regex = "1.0.0"
rust-embed = "4.3"
toml = "0.4"
failure = "0.1.1"
failure_derive = "0.1.1"
hostname = "0.1.5"
tempfile = "3.0.2"
get_if_addrs = "0.5.3"
shmem = "0.2.0"
libc = "0.2.42"
nix = "0.13"
base64 = "0.10"
task_scheduler = "0.2.0"
structopt = "0.2.15"

# Statically link SQLite (use the crate version provided by Diesel)
libsqlite3-sys = { version = "*", features = ["bundled"] }

[dev-dependencies]
serde_json = "1.0"
lazy_static = "1.3.0"
mock-it = "0.2.1"
