[package]
name = "pihole_api"
version = "0.1.0"
authors = ["Mcat12 <mark@pi-hole.net>"]
description = "Work in progress HTTP API for Pi-hole."
homepage = "https://pi-hole.net"
repository = "https://github.com/pi-hole/api"
readme = "README.md"
license = "EUPL-1.2"
publish = false
edition = "2018"

[profile.release]
lto = true

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["diesel_sqlite_pool"] }
rocket_cors = { version = "0.5", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
rmp = "0.8"
regex = "1.1.7"
rust-embed = "4.4"
toml = "0.5"
failure = "0.1.1"
failure_derive = "0.1.1"
hostname = "0.1.5"
tempfile = "3.0.8"
get_if_addrs = "0.5.3"
shmem = "0.2.0"
libc = "0.2.58"
nix = "0.14"
base64 = "0.10"
task_scheduler = "0.2.0"
structopt = "0.2.18"

# Statically link SQLite (use the crate version provided by Diesel)
# The highest version which Diesel currently allows is 0.12.0
libsqlite3-sys = { version = "0.12.0", features = ["bundled"] }

[dev-dependencies]
serde_json = "1.0"
lazy_static = "1.3.0"
mock-it = "0.3.0"
